fix: change scrollbar width

--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 }
 
 ::-webkit-scrollbar {
-  width: 0.9rem;
+  width: 0.7rem;
 }
 
 ::-webkit-scrollbar-track {
